--- a/mlkit/app/src/main/res/layout/fragment_recipe.xml
+++ b/mlkit/app/src/main/res/layout/fragment_recipe.xml
@@ -37,28 +37,6 @@
         android:layout_height="300dp"
         app:srcCompat="@drawable/kindpng_1214636" />
 
-    <View
-        android:id="@+id/panelShadow"
-        android:layout_width="270dp"
-        android:layout_height="45dp"
-        android:layout_alignBottom="@id/charPNG"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="118dp"
-        android:layout_marginRight="118dp"
-        android:layout_marginBottom="-3dp"
-        android:background="@drawable/recipe_panel_shadow" />
-
-    <View
-        android:id="@+id/panel"
-        android:layout_width="270dp"
-        android:layout_height="45dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="120dp"
-        android:layout_marginRight="120dp"
-        android:layout_marginTop="80dp"
-        android:layout_alignBottom="@id/charPNG"
-        android:background="@drawable/recipe_panel" />
-
     <TextView
         android:id="@+id/tv_subtitle"
         android:layout_width="wrap_content"
@@ -275,4 +253,78 @@
         android:layout_marginLeft="360dp"
         android:background="@drawable/ic_dock_add_recipe"
         android:layout_marginTop="692dp" />
+
+    <FrameLayout
+        android:id="@+id/infoPanel"
+        android:layout_width="match_parent"
+        android:layout_height="118dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="250dp"
+        android:background="@android:color/transparent">
+
+        <ImageView
+            android:id="@+id/panel"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
+            android:layout_alignBottom="@id/charPNG"
+            android:layout_gravity="center" app:srcCompat="@drawable/panel_shadow" />
+
+        <FrameLayout
+            android:id="@+id/info"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent">
+
+            <ImageView
+                android:id="@+id/fire"
+                android:layout_width="20dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="-5dp"
+                android:layout_marginRight="87dp"
+                app:srcCompat="@drawable/ic_fire" />
+
+            <TextView
+                android:id="@+id/numCals"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="17dp"
+                android:text="163 cals"
+                android:textSize="15dp"
+                android:gravity="top"
+                />
+
+            <ImageView
+                android:id="@+id/clock"
+                android:layout_width="20dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="-5dp"
+                android:layout_marginRight="-13dp"
+                app:srcCompat="@drawable/ic_clock" />
+
+            <TextView
+                android:id="@+id/numTime"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="-83dp"
+                android:text="30 mins"
+                android:textSize="15dp"
+                android:gravity="top"
+                />
+
+        </FrameLayout>
+
+    </FrameLayout>
+
 </RelativeLayout>
