--- a/mlkit/app/src/main/res/layout/fragment_recipe.xml
+++ b/mlkit/app/src/main/res/layout/fragment_recipe.xml
@@ -37,142 +37,6 @@
         android:layout_height="300dp"
         app:srcCompat="@drawable/kindpng_1214636" />
 
-    <TextView
-        android:id="@+id/tv_subtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:fontFamily="@font/roboto_regular"
-        android:text="@string/welcome"
-        android:textColor="@color/light_blue"
-        android:textSize="17sp" />
-
-    <EditText
-        android:id="@+id/et_name"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/your_name"
-        android:textColorHint="@color/dark_blue"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:padding="15dp"
-        android:inputType="textPersonName"
-        android:fontFamily="@font/roboto_regular"
-        android:layout_below="@id/tv_subtitle"
-        android:background="@drawable/et_custom"
-        android:layout_marginTop="-15dp"
-        android:textColor="@color/dark_blue"
-        android:textSize="15sp"/>
-
-    <View
-        android:id="@+id/line_name"
-        android:layout_width="918dp"
-        android:layout_height="1dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginRight="75dp"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/et_name"
-        android:layout_marginTop="-5dp"
-        android:background="@drawable/login_line" />
-
-    <EditText
-        android:id="@+id/et_email"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/e_mail"
-        android:textColorHint="@color/dark_blue"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:padding="15dp"
-        android:fontFamily="@font/roboto_regular"
-        android:inputType="textEmailAddress"
-        android:layout_below="@id/et_name"
-        android:background="@drawable/et_custom"
-        android:layout_marginTop="5dp"
-        android:textColor="@color/dark_blue"
-        android:textSize="15sp" />
-
-    <View
-        android:id="@+id/line_email"
-        android:layout_width="918dp"
-        android:layout_height="1dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginRight="75dp"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/et_email"
-        android:layout_marginTop="-5dp"
-        android:background="@drawable/login_line" />
-
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/password"
-        android:textColorHint="@color/dark_blue"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:padding="15dp"
-        android:fontFamily="@font/roboto_regular"
-        android:inputType="textPassword"
-        android:layout_below="@id/et_email"
-        android:background="@drawable/et_custom"
-        android:layout_marginTop="5dp"
-        android:textColor="@color/dark_blue"
-        android:textSize="15sp" />
-
-    <View
-        android:id="@+id/line_password"
-        android:layout_width="918dp"
-        android:layout_height="1dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginRight="75dp"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/et_password"
-        android:layout_marginTop="-5dp"
-        android:background="@drawable/login_line" />
-
-    <EditText
-        android:id="@+id/et_phone"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Phone Number"
-        android:textColorHint="@color/dark_blue"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:padding="15dp"
-        android:fontFamily="@font/roboto_regular"
-        android:inputType="textPhonetic"
-        android:layout_below="@id/et_password"
-        android:background="@drawable/et_custom"
-        android:layout_marginTop="5dp"
-        android:textColor="@color/dark_blue"
-        android:textSize="15sp" />
-
-    <View
-        android:id="@+id/line_phone"
-        android:layout_width="918dp"
-        android:layout_height="1dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginRight="75dp"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/et_phone"
-        android:layout_marginTop="-5dp"
-        android:background="@drawable/login_line" />
-
-
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
-        android:layout_marginRight="70dp"
-        android:fontFamily="@font/roboto_regular"
-        android:textColor="@android:color/white"
-        android:textSize="15sp"
-        android:background="@drawable/btn_custom"
-        android:layout_below="@id/et_phone"
-        android:layout_marginTop="20dp"
-        android:text="@string/register"/>
 
     <ImageButton
         android:id="@+id/buttonChef"
@@ -336,5 +200,167 @@
         </FrameLayout>
 
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/recipeName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_regular"
+        android:text="Egg Fried Rice"
+        android:textColor="@color/dark_blue"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="355dp"
+        android:layout_marginLeft="30dp"/>
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="390dp"
+        android:layout_marginLeft="30dp"
+        android:src="@drawable/profile_pic" />
+
+    <TextView
+        android:id="@+id/profileName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_regular"
+        android:text="by Mark Tan"
+        android:textColor="@color/light_orange"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:layout_marginTop="395dp"
+        android:layout_marginLeft="70dp"/>
+
+    <TextView
+        android:id="@+id/ingredients"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_regular"
+        android:text="Ingredients"
+        android:textColor="@color/dark_blue"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:layout_marginTop="430dp"
+        android:layout_marginLeft="30dp"/>
+
+
+    <!--icon base shape 2-->
+    <View
+        android:id="@+id/square_1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="456dp"
+        android:layout_marginEnd="309dp"
+        android:layout_marginBottom="204dp"
+        android:background="@drawable/ic_icon_base" />
+
+    <View
+        android:id="@+id/square_3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="230dp"
+        android:layout_marginTop="456dp"
+        android:layout_marginEnd="109dp"
+        android:layout_marginBottom="204dp"
+        android:background="@drawable/ic_icon_base3" />
+
+    <View
+        android:id="@+id/square_4"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="330dp"
+        android:layout_marginTop="456dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="204dp"
+        android:background="@drawable/ic_icon_base4" />
+
+    <View
+        android:id="@+id/square_2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="456dp"
+        android:layout_marginEnd="210dp"
+        android:layout_marginBottom="204dp"
+        android:background="@drawable/ic_icon_base2" />
+
+
+    <ImageView
+        android:layout_width="410dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-39dp"
+        android:layout_marginTop="467dp"
+        android:src="@drawable/chicken" />
+
+    <ImageView
+        android:layout_width="400dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-134dp"
+        android:layout_marginTop="468dp"
+        android:src="@drawable/egg" />
+
+    <ImageView
+        android:layout_width="400dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="323dp"
+        android:layout_marginTop="467dp"
+        android:src="@drawable/springonion" />
+
+    <ImageView
+        android:layout_width="400dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="123dp"
+        android:layout_marginTop="467dp"
+        android:src="@drawable/watermelon" />
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_regular"
+        android:text="Description"
+        android:textColor="@color/dark_blue"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:layout_marginTop="540dp"
+        android:layout_marginLeft="30dp"/>
+
+    <TextView
+        android:id="@+id/descriptionBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_regular"
+        android:text="Chinese Egg Fried Rice is a featured Chinese dish popular all over the country. Chinese people stir fry rice with different side ingredients and seasonings, thus there come different types of fried rice."
+        android:textColor="@color/dark_blue"
+        android:textSize="12sp"
+        android:layout_marginTop="560dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"/>
 
 </RelativeLayout>
