--- a/mlkit/app/src/main/res/layout/activity_still_image.xml
+++ b/mlkit/app/src/main/res/layout/activity_still_image.xml
@@ -88,6 +88,7 @@
         android:layout_marginRight="50dp"
         android:background="@android:color/transparent"
         android:scaleType="center"
+        android:onClick="Import"
         android:src="@drawable/ic_mdi_image" />
 
     <TextView
