--- a/mlkit/app/src/main/res/layout/home_page.xml
+++ b/mlkit/app/src/main/res/layout/home_page.xml
@@ -20,6 +20,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
         android:layout_marginStart="4dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="4dp"
